# open-canvas-admin-api

./: .gitignore  Makefile  README.md  manage.py  pyproject.toml
open_canvas/: apps.py  config.py  data_warehouse.py  models.py  urls.py  utils.py  views.py
open_canvas/canvas/: api.py  constants.py  enrollments.py  sync.py  users.py
open_canvas/config/: config.ini.sample  config.py
open_canvas/templates/: base_generic.html  canvassite.html  canvassite_detail.html  canvassite_list.html  canvasuser.html  canvasuser_detail.html  canvasuser_list.html  course.html  course_detail.html  course_list.html  courses.html  demo.html  sidenav.html  user.html  user_detail.html  user_list.html  users.html
open_canvas_admin_api/: settings.py  urls.py  wsgi.py
theme/static_src/src/: styles.css
theme/templates/: base.html
